<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/front"
    tools:context="com.piwet.technologies.lafacuapp.LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="465dp"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/loginDismissButt"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/dismiss_butt"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/loginLogoImg"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/logo"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/loginTitleTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginLogoImg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/usernameTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_below="@+id/loginTitleTxt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="#96333333"
                    android:hint="@string/miusuario"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:paddingLeft="44dp"
                    android:textAlignment="viewStart"
                    android:textColor="#fff"
                    android:textColorHint="#f1f1f1"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    app:srcCompat="@drawable/mini_user"
                    android:id="@+id/imageView2"
                    android:layout_alignTop="@+id/usernameTxt"
                    android:layout_alignStart="@+id/usernameTxt"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_below="@+id/usernameTxt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#96333333"
                    android:hint="@string/mipass"
                    android:inputType="textPassword"
                    android:paddingLeft="44dp"
                    android:textAlignment="viewStart"
                    android:textColor="#fff"
                    android:textColorHint="#f1f1f1"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    app:srcCompat="@drawable/mini_lock"
                    android:id="@+id/imageView"
                    android:layout_alignTop="@+id/passwordTxt"
                    android:layout_alignStart="@+id/passwordTxt"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/loginButt"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/passwordTxt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorAccent"
                    android:text="@string/conectars"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <RelativeLayout
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    tools:ignore="UselessLeaf">

                </RelativeLayout>

                <Button
                    android:id="@+id/signUpButt"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/registrarse_now"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlHardcoded,SmallSp" />

                <Button
                    android:id="@+id/forgotPassButt"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignBaseline="@+id/signUpButt"
                    android:layout_alignBottom="@+id/signUpButt"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/olvida_contrasena"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal|bold"
                    tools:ignore="RelativeOverlap,RtlHardcoded,SmallSp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
