<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piwet.technologies.lafacuapp.Account">


    <RelativeLayout
        android:id="@+id/accTopView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#334afa">

        <Button
            android:id="@+id/btn_notificacion"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@android:color/white"
            android:background="@drawable/tab_activity" />

        <TextView
            android:id="@+id/accUsernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/miusuario"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/accAvatarImg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_above="@+id/textviewFullName"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.8"
            tools:ignore="RtlHardcoded" />


        <TextView
            android:id="@+id/textviewFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/nombre_completo"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accAvatarImg" />


    </RelativeLayout>





    <!-- TAB BAR -->
    <LinearLayout
        android:id="@+id/sellTabBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/tab_one"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/tab_home"
            android:backgroundTint="#555"
            android:paddingTop="40dp"
            android:textAllCaps="false"
            android:textColor="#555" />

       <!-- <Button
            android:id="@+id/tab_two"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:background="@drawable/tab_likes"
            android:backgroundTint="#555"
            android:paddingTop="40dp"
            android:textAllCaps="false"
            android:textColor="#555" />-->

        <Button
            android:id="@+id/tab_three"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:background="@drawable/tab_sell"
            android:backgroundTint="#555"
            android:paddingTop="40dp"
            android:textAllCaps="false"
            android:textColor="#555" />

       <!-- <Button
            android:id="@+id/tab_four"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:background="@drawable/tab_activity"
            android:backgroundTint="#555"
            android:paddingTop="40dp"
            android:textAllCaps="false"
            android:textColor="#555" />-->

        <Button
            android:id="@+id/tab_five"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:background="@drawable/tab_account"
            android:backgroundTint="#3552f4"
            android:paddingTop="40dp"
            android:textAllCaps="false"
             />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="84dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/mi_saldo"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>
